# test_cmake

./: CMakeLists.txt  main.cpp
test1/: CMakeLists.txt  fun1.cpp  fun1.h
test2/: CMakeLists.txt  fun2.cpp  fun2.h
